Some CSS changes to fix the scrollbar

--- a/src/guiassets/css/styles2.scss
+++ b/src/guiassets/css/styles2.scss
@@ -668,17 +668,22 @@ textarea {
     padding-right: 15px;
     pointer-events: all;
     width: 10px;
+    width: 5px;
 
     &-track {
         padding-right: 15px;
         background: rgba(0, 0, 0, 0);
+        width: 5px;
+        pointer-events: all;
     }
 
     &-thumb {
         padding-right: 15px;
+        pointer-events: all;
         background: var(--coloralt);
         border-radius: 5px;
         transition: 0.3s;
+        width: 5px;
 
         &:hover {
             background: var(--color);
@@ -1121,6 +1126,7 @@ td {
     border-style: solid;
     border-color: var(--color);
     border-radius: 10px;
+    margin-bottom: 15px;
 
     &-wrapper {
         position: relative;
@@ -1140,10 +1146,10 @@ td {
         padding: 0 22px;
         font-size: 20px;
         font-weight: 300;
-        color: var(--color);
+        color: var(--buttontext);
         height: 60px;
         line-height: 60px;
-        background: var(--background);
+        background: var(--buttonacthov);
         cursor: pointer;
         border-radius: 10px;
     }
@@ -1158,8 +1164,9 @@ td {
     border: 1px solid var(--color);
     border-top: 0;
     border-radius: 10px;
-    background: var(--background);
+    background: var(--button);
     background-size: 100% 100%;
+    color: var(--buttontext);
     transition: all 0.5s;
     visibility: hidden;
     pointer-events: none;
@@ -1177,7 +1184,7 @@ td {
     padding: 0 22px 0 22px;
     font-size: 22px;
     font-weight: 300;
-    color: var(--color);
+    color: var(--buttontext);
     line-height: 60px;
     cursor: pointer;
     transition: all 0.5s;
@@ -1221,7 +1228,7 @@ td {
     border: solid 2px var(--color);
     border-radius: 10px;
     color: var(--buttontext);
-    background: var(--button);
+    background: var(--buttonacthov);
 
     &:hover {
         cursor: auto;
